feat: restructure academic entities and API layer
- Restructured Institution, School and SchoolClass relationships
- Added Enrollment entity for student enrollment history
- Added ClassTeacherAssignment entity for teacher assignment history
- Updated Student and Teacher relationships
- Added repositories and services for academic entities
- Added request and response DTOs
- Updated controllers to use DTOs
- Added Swagger/OpenAPI documentation
- Improved authentication response handling
- Added validation and standardized API error responses