@@ -1,12 +1,12 @@
 package com.duolinfo.ia.proj.config;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.stereotype.Component; // <-- Importar Component
+import org.springframework.stereotype.Component; // Importante
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import com.duolinfo.ia.proj.service.JwtService;
@@ -16,50 +16,45 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
-@Component // <-- Adicionar esta anotação para o Spring reconhecer o Bean
+@Component 
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
-	private final JwtService jwtService;
+    private final JwtService jwtService;
 
-	public JwtAuthenticationFilter(JwtService jwtService) {
-		this.jwtService = jwtService;
-	}
+    public JwtAuthenticationFilter(JwtService jwtService) {
+        this.jwtService = jwtService;
+    }
 
-	@Override
-	protected void doFilterInternal(HttpServletRequest request,
-	                                HttpServletResponse response,
-	                                FilterChain filterChain) throws ServletException, IOException {
+    @Override
+    protected void doFilterInternal(HttpServletRequest request, 
+                                    HttpServletResponse response, 
+                                    FilterChain filterChain) throws ServletException, IOException {
 
-		String authHeader = request.getHeader("Authorization");
+        String authHeader = request.getHeader("Authorization");
 
-		if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-			filterChain.doFilter(request, response);
-			return;
-		}
+        if (authHeader != null && authHeader.startsWith("Bearer ")) {
+            String token = authHeader.substring(7);
 
-		String token = authHeader.substring(7).trim();
+            if (jwtService.isTokenValid(token)) {
+                String email = jwtService.getEmailFromToken(token);
+                String profileType = jwtService.getRoleFromToken(token);
 
-		try {
-			if (jwtService.isTokenValid(token)) {
-				String email = jwtService.getEmailFromToken(token);
-				String role = jwtService.getRoleFromToken(token);
+                if (profileType == null) {
+                    profileType = "USER";
+                }
 
-				if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-					var authority = new SimpleGrantedAuthority("ROLE_" + (role != null ? role : "USER"));
+                SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + profileType);
 
-					var authentication = new UsernamePasswordAuthenticationToken(
-							email,
-							null,
-							Collections.singletonList(authority)
-					);
+                UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
+                        email,
+                        null,
+                        List.of(authority)
+                );
 
-					SecurityContextHolder.getContext().setAuthentication(authentication);
-				}
-			}
-		} catch (Exception e) {
-			SecurityContextHolder.clearContext();
-		}
+                SecurityContextHolder.getContext().setAuthentication(authToken);
+            }
+        }
 
-		filterChain.doFilter(request, response);
-	}
+        filterChain.doFilter(request, response);
+    }
 }
